add category select option in restaurant shared form

--- a/app/views/admin/restaurants/_form.html.erb
+++ b/app/views/admin/restaurants/_form.html.erb
@@ -11,6 +11,8 @@
   <%= f.label :name, "Name" %>
   <%= f.text_field :name %>
 
+  <%= f.collection_select :category_id, Category.all, :id, :name, {prompt: true}, {class: "form-control"} %>
+
   <%= f.label :tel, "Tel" %>
   <%= f.text_field :tel %>
 
