--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -5,6 +5,9 @@
     <%= link_to 'Categories', admin_categories_path %>
   </div>
   <div class="form-inline" >
+    <% if @category.errors.any? %>
+      <%= @category.errors.full_messages.to_sentence %>
+    <% end %>
     <%= form_for [:admin, @category] do |f| %>
       <div class="form-group">
         <%= f.text_field :name, placeholder: "Category Name",  class: "form-control" %>
