--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,10 +4,10 @@
 
        <!-- page-header 裡面顯示個人檔案資料 -->
        <div class="page-header">
- 
+
          <div class="col-md-3 col-sm-4">
            <div class="text-center">
-            <img src="http://via.placeholder.com/350x350" class="img-responsive img-rounded">
+            <%= image_tag @user.avatar, class: "img-responsive img-rounded" %>
           </div>
          </div>
 
