display commenter's name on restaurant show page

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -24,9 +24,14 @@
 
     <hr>
 
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
     <% @restaurant.comments.each do |comment| %>
      <div>
-       <h4><%= comment.user.email.split('@').first %></h4>
+       <h4><%= comment.user.email.name %></h4>
        <p><%= simple_format comment.content %></p>
        <p class="text-muted">
          <em><%= time_ago_in_words(comment.created_at) %> </em>
@@ -36,8 +41,6 @@
        </p>
      </div>
      <hr>
-
-
      <% end %>
 
      <%= form_for [@restaurant, @comment] do |f| %>
