--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,3 +1,12 @@
+.nav-pills-center {
+  text-align: center;
+}
+
+.nav-pills-center > li {
+  float: none;
+  display: inline-block;
+}
+
 .restaurant-item {
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -17,4 +26,22 @@
 .edit_user img {
    width: 50px;
    margin: 10px;
+ }
+
+ .my-restaurant {
+   display: inline-block;
+   text-align: center;
+   padding: 7px 7px 0 7px;
+ }
+
+ .my-restaurant > div {
+   height: 60px;
+ }
+
+ .my-restaurant img {
+   max-height: 100%;
+ }
+
+ .panel a:hover .my-restaurant {
+   background-color: #eee;
  }
