--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,23 @@
 <div class="container">
   <div class="row">
 
+    <!-- 使用 Bootstrap components 的 Nav Tabs -->
+    <!-- https://getbootstrap.com/docs/3.3/components/#nav-tabs -->
+    <ul class="nav nav-tabs">
+      <li role="presentation" class="active">
+        <%= link_to '首頁', root_path %>
+      </li>
+      <li role="presentation">
+        <%= link_to '最新動態', feeds_restaurants_path %>
+      </li>
+    </ul>
+
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+
     <!-- 標題尚未置中 -->
       <ul class="nav nav-pills">
         <li role="presentation" class="active"><%= link_to "全部餐廳", root_path %></li>
