--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -13,8 +13,7 @@
           <li><strong>Opening Hour:</strong> <%= @restaurant.opening_hours %></li>
           <li><strong>Tel:</strong> <%= @restaurant.tel %></li>
           <li><strong>Address:</strong> <%= @restaurant.address %></li>
-          <%= link_to 'Favorite', favorite_restaurant_path(@restaurant), method: :post, class: "btn btn-primary" %>
-          <%= link_to 'Unfavorite', unfavorite_restaurant_path(@restaurant), method: :post, class: "btn btn-info" %>
+          <<%= render partial: "shared/favorite", locals: {restaurant: @restaurant} %>
         </ul>
       </div>
     </div>
