--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -14,6 +14,7 @@
           <li><strong>Tel:</strong> <%= @restaurant.tel %></li>
           <li><strong>Address:</strong> <%= @restaurant.address %></li>
           <<%= render partial: "shared/favorite", locals: {restaurant: @restaurant} %>
+          <<%= render partial: "shared/like", locals: {restaurant: @restaurant} %>
         </ul>
       </div>
     </div>
